--- a/static/styles/orders_complete.css
+++ b/static/styles/orders_complete.css
@@ -8,6 +8,7 @@
   margin: 4rem auto;
   width: 500px;
   font-family: 'Fragment Mono', 'Malgun Gothic';
+  box-shadow: 20px 20px 20px #9595950a, -20px -20px 20px #9595950a, -20px 20px 20px #9595950a, 20px -20px 20px #9595950a;
 }
 
 /* receipt-body */
