--- a/static/styles/orders_ordering.css
+++ b/static/styles/orders_ordering.css
@@ -11,15 +11,6 @@
 }
 
 /* (배송지)/주문자/주문상품 */
-.purchase-pdt-item {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  margin-bottom: 0.5rem;
-  padding: 1rem 0;
-  background-color: #9595950e;
-  border-radius: 1.5rem;
-}
 .domain {
   margin-bottom: 3rem;
 }
@@ -33,11 +24,27 @@
   padding: 0.8rem;
   font-size: 0.9rem;
 }
+.purchase-pdt-item {
+  margin-bottom: 0.5rem;
+  padding: 1rem 0;
+  background-color: #9595950e;
+  border-radius: 1.5rem;
+}
+.purchase-pdt-img-wrap {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
 .purchase-pdt-img {
-  width: 20%;
+  width: 100%;
+  object-fit: contain;
+}
+.pdt-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .pdt-name {
-  width: 400px;
   word-break: break-all;
   font-weight: 800;
   font-size: 1.2rem;
@@ -60,10 +67,15 @@
   color: var(--line);
   font-size: 0.9rem;
 }
-.buy-mount {
+.pdt-mount-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.pdt-buy-mount {
   font-size: 1rem;
 }
-.buy-mount > span {
+.pdt-buy-mount > span {
   font-size: 1.5rem;
   font-weight: 600;
   color: var(--main);
