--- a/static/styles/review_modal.css
+++ b/static/styles/review_modal.css
@@ -69,6 +69,18 @@
 	transition: all 0.5s;
 	overflow: auto;
 }
+.overlayC2 {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	backdrop-filter: blur(4px);
+	z-index: 100;
+	transition: all 0.5s;
+	overflow: auto;
+}
 .scroll-block {
 	overflow: hidden;
 }
@@ -123,6 +135,27 @@
 #review-area .rev-sec .rev-main .rev-body p {
 	margin-bottom: 1.5rem;
 }
+#review-area .rev-sec .rev-main .rev-body .rev-img {
+	cursor: pointer;
+}
+#review-area .rev-sec .rev-main .rev-body .btn-close-img {
+	position: absolute;
+	top: 13%;
+	right: 25%;
+	color: var(--bg);
+	background: var(--highlight);
+	z-index: 1001;
+}
+#review-area .rev-sec .rev-main .rev-body .rev-img-popup {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	max-width: 80vh;
+	box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.3);
+	z-index: 1000;
+	transition: all 0.5s;
+}
 #review-area .rev-sec .rev-main .rev-footer .like-btn {
 	border: 2px solid var(--main);
 	border-radius: 2rem;
@@ -130,6 +163,19 @@
 	padding: 0.5rem 0.3rem 0.5rem 0;
 	margin-top: 1.5rem;
 	transition: all 0.2s ease;
+	position: relative;
+}
+#review-area .rev-sec .rev-main .rev-footer .like-btn::after {
+	content: "";
+	display: inline-block;
+	height: 100%;
+	width: 100%;
+	border-radius: 100px;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: -1;
+	transition: all 0.4s;
 }
 #review-area .rev-sec .rev-main .rev-footer .like-btn i {
 	padding: 0.5rem;
@@ -141,6 +187,15 @@
 #review-area .rev-sec .rev-main .rev-footer .like-active {
 	background: var(--main);
 	color: var(--bg);
+}
+#review-area .rev-sec .rev-main .rev-footer .like-active::after {
+	background: var(--main);
+	transform: scaleX(1.4) scaleY(1.6);
+	opacity: 0;
+}
+#review-area .rev-sec .rev-main .rev-footer .like-btn:active {
+	transform: translateY(-1px);
+	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
 
 #qna-area .qna-sec {
