--- a/static/styles/cart.css
+++ b/static/styles/cart.css
@@ -100,8 +100,14 @@
   margin: 3rem 0;
 }
 
+.cart__pay--choice {
+  margin-bottom: 1rem;
+  font-size: 1.1rem;
+  font-weight: 600;
+}
+
 .cart__pay--total {
-  font-size: 1.3rem;
+  font-size: 1.4rem;
   font-weight: 600;
   margin-bottom: 2rem;
 }
