관리자만 수정/삭제가능

--- a/products/templates/products/products_create.html
+++ b/products/templates/products/products_create.html
@@ -2,13 +2,12 @@
 {% load django_bootstrap5 %}
 {% load static %}
 {% block body %}
-  <a href="{% url 'products:index' %}">상품 메인</a>
-  <div class="container">
+  <div class='my-5'>
+    <h1 class='mb-5 text-center'>상품 등록</h1>
     <form action="{% url 'products:products_create' %}" method="POST" enctype='multipart/form-data'>
       {% csrf_token %}
       {% bootstrap_form create_form %}
-      <input type="submit" id="" value="제출">
+      <input class="btn btn-primary" type="submit" id="" value="등록">
     </form>
   </div>
-
 {% endblock body %}
