--- a/products/templates/products/products_update.html
+++ b/products/templates/products/products_update.html
@@ -2,13 +2,12 @@
 {% load django_bootstrap5 %}
 {% load static %}
 {% block body %}
-<a href="{% url 'products:index' %}">집으로</a>
-<div class="container">
-<form action="" method="POST" enctype='multipart/form-data'>
-    {% csrf_token %}
-    {% bootstrap_form form %} 
-    <input type="submit" id="" value="제출">  
-</form>
-</div>
-
+  <div class='my-5'>
+    <h1 class='mb-5 text-center'>상품 정보 수정</h1>
+    <form action="" method="POST" enctype='multipart/form-data'>
+      {% csrf_token %}
+      {% bootstrap_form form %}
+      <input class="btn btn-success" type="submit" id="" value="수정">
+    </form>
+  </div>
 {% endblock body %}
