--- a/static/styles/product_detail.css
+++ b/static/styles/product_detail.css
@@ -248,7 +248,8 @@
 #pdt-info,
 #pdt-qna,
 #pdt-review,
-#pdt-recommend {
+#pdt-recommend,
+#superuser-power {
   margin-top: -60px;
   margin-bottom: 2rem;
   padding-top: 60px;
@@ -256,7 +257,8 @@
 #pdt-info h3,
 #pdt-qna h3,
 #pdt-review h3,
-#pdt-recommend h3 {
+#pdt-recommend h3,
+#superuser-power h3 {
   margin-bottom: 0.5rem;
   font-weight: 700;
   font-size: 1.3rem;
