--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -42,7 +42,7 @@
                 <td class="cart__quantity">
                   <div class=" buy-mount-btn">
                     <span class='minus-btn'>-</span>
-                    <span class='buy-mount'>{{ counter }}</span>
+                    <span class='buy-mount'>{{ cart_item.quantity }}</span>
                     <span class='plus-btn'>+</span>
                   </div>
                 </td>
