주문하기 url 연결

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -74,7 +74,7 @@
             <span id="total">0원</span>
           </p>
           <button class="cart__btn" type="submit" form="like_form">
-            주문 하기
+            <a href="{% url "orders:index"%}">주문 하기</a>
           </button>
         </div>
 
